--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "homepage": "https://YOMNA-197.github.io/vue-project", 
   "engines": {
     "node": "^20.19.0 || >=22.12.0"
   },
@@ -11,24 +12,27 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix --cache",
-    "format": "prettier --write --experimental-cli src/"
+    "format": "prettier --write --experimental-cli src/",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.18",
+    "vue": "^3.5.26",
+    "vue-router": "^4.6.4",
     "firebase": "^12.8.0",
     "tailwindcss": "^4.1.18",
-    "vue": "^3.5.26",
-    "vue-router": "^4.6.4"
+    "@tailwindcss/vite": "^4.1.18"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.2",
-    "@vitejs/plugin-vue": "^6.0.3",
-    "@vue/eslint-config-prettier": "^10.2.0",
-    "eslint": "^9.39.2",
-    "eslint-plugin-vue": "~10.6.2",
-    "globals": "^17.0.0",
-    "prettier": "3.7.4",
     "vite": "^7.3.0",
-    "vite-plugin-vue-devtools": "^8.0.5"
+    "@vitejs/plugin-vue": "^6.0.3",
+    "vite-plugin-vue-devtools": "^8.0.5",
+    "eslint": "^9.39.2",
+    "@eslint/js": "^9.39.2",
+    "eslint-plugin-vue": "~10.6.2",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "prettier": "3.7.4",
+    "gh-pages": "^6.3.0",
+    "globals": "^17.0.0"
   }
 }
